--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -25,6 +25,7 @@
           <h2 class="hero-text">{{ site.github.project_tagline }}</h2>
           <div class="cta-buttons">
             <a href="{{ site.github.zip_url }}" class="float">Download ZIP</a>
+            <a href="http://docs.shopify.com/embedded-app-sdk" class="float">Documentation</a>
             <a href="{{ site.github.repository_url }}" class="float github">
               Github Repo
               <i class="icon-star" title="Stars"></i> <span id="starCount"></span>
